--- a/lol.css
+++ b/lol.css
@@ -8,7 +8,7 @@ body {
 .big-text {
   font-size: 10em;
   color: red; /* Start color */
-  font-family: "Comic Sans MS". cursive
+  font-family: "Comic Sans MS", cursive
   animation: color-change 2s infinite alternate; /* Animation for color change */
 }
 
